Bug 92088 - Appear Document recovery Dialog (Crash?) when open formula bar, and restart LibO
Summary: Appear Document recovery Dialog (Crash?) when open formula bar, and restart LibO
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Michael Meeks
URL:
Whiteboard: target:5.1.0 target:5.0.0.2
Keywords:
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-06-15 13:14 UTC by baffclan
Modified: 2016-10-25 19:24 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
backtrace (15.75 KB, text/plain)
2015-06-15 14:11 UTC, Gordo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description baffclan 2015-06-15 13:14:23 UTC
Steps to Reproduce:
1. Start New Writer
2. Open formula bar (Menu ->  Toolbars -> formula)
3. Appear formula bar
4. Close LibO
5. Start LibO
6. Appear Document recovery Dialog (Crash?)


Windows 7 Pro X64
Version: 5.1.0.0.alpha1+
Build ID: 46564fd97308ce070248482ad65a311a329a2b76
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-06-15_00:27:07
Locale: ja-JP (ja_JP)
Comment 1 Gordo 2015-06-15 14:11:35 UTC
Created attachment 116560 [details]
backtrace

I can reproduce.

Version: 5.1.0.0.alpha1+
Build ID: 46564fd97308ce070248482ad65a311a329a2b76
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-15_00:08:53
Comment 2 Michael Meeks 2015-06-17 13:05:28 UTC
Pushed a fix here: https://gerrit.libreoffice.org/16343 will review & merge after my flight (DV) =)

Thanks !
Comment 3 Commit Notification 2015-06-18 08:42:22 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0aa10c0b3d5794cd5b701b57de2387eee12076b6

tdf#92088 - don't invalidate disposed toolbar items.

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 baffclan 2015-06-19 10:23:49 UTC
Cannot Reproduce with newest master.

Windows 7 Pro x64
Version: 5.1.0.0.alpha1+
Build ID: ba70050dc37f82306a8a3c5815372a4b9fff18fc
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-06-19_06:35:49
Locale: ja-JP (ja_JP)

Thanks for fixing this.
Comment 5 Commit Notification 2015-06-23 13:13:00 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=020aecf5d916b0c24941337f9c21834d88f4e5cd

tdf#92088: Fix an overlook in the refactor.

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2015-06-23 13:22:01 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=575629963e370e05c0ca90d58838094a5b4d11ff&h=libreoffice-5-0

tdf#92088 - don't invalidate disposed toolbar items.

It will be available in 5.0.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.