tdf#92088 - don't invalidate disposed toolbar items.

Change-Id: Ie90906f1ed8dc205850df3a48688f66b7a72a4f4
Reviewed-on: https://gerrit.libreoffice.org/16343
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
Tested-by: Michael Meeks <michael.meeks@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/16428
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
Tested-by: Jan Holesovsky <kendy@collabora.com>