vcl/source/window/toolbox.cxx
@@ -5610,7 +5610,7 @@ void ToolBox::ImplShowFocus()
     if( mnHighItemId && HasFocus() )
     {
         ImplToolItem* pItem = ImplGetItem( mnHighItemId );
-        if( pItem->mpWindow )
+        if( pItem->mpWindow && !pItem->mpWindow->IsDisposed() )
         {
             vcl::Window *pWin = pItem->mpWindow->ImplGetWindowImpl()->mpBorderWindow ? pItem->mpWindow->ImplGetWindowImpl()->mpBorderWindow : pItem->mpWindow;
             pWin->ImplGetWindowImpl()->mbDrawSelectionBackground = true;
